Updated the readme to include highlightjs. Started the 2nd section on the MQ2 Intro tutorial.

--- a/index.html
+++ b/index.html
@@ -141,12 +141,13 @@
 						<li><p style="font-size: 20px;"><a href="https://notepad-plus-plus.org/" target="_blank">Notepad++</a></p></li>
 						<li><p style="font-size: 20px;"><a href="http://mqemulator.net/downloads.php" target="_blank">MQ2 Program</a></p></li>
 						<li><p style="font-size: 20px;"><a href="tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini" target="_blank">MQ2Melee ini Example</a></p></li>
-						<li><p style="font-size: 20px;"><a href="tutorials/mq2-tutorials/mq2-intro/AutoKill.mac" target="_blank">Autokill Macro Example</a></p></li>
+						<li><p style="font-size: 20px;"><a href="tutorials/mq2-tutorials/mq2-intro/AutoKill2.mac" target="_blank">AutoKill2 Macro Example</a></p></li>
 					</ul>
 				</div>
 				<div class="col">
 					<ul class="list-unstyled"><h3>Section Links:</h3>
 						<li><p style="font-size: 20px;"><a href="#mq2-intro-section1">Section 1: MQ2Melee</a></p></li>
+						<li><p style="font-size: 20px;"><a href="#mq2-intro-section2">Section 2: Macros</a></p></li>
 					</ul>
 				</div>
 			</div>
@@ -248,7 +249,13 @@ holyshit0 = /echo Hello Spam</code></pre>
 			<br></br>
 			<p>If you want to see the full example, then I have it at the top of the page as a download link.</p>
 			<p>Note: If you're familiar with the /multiline command, then you can use it to string together a bunch of commands for using things like timers.</p>
-
+			<br></br><br></br>
+			<h4 class="text-center" id="mq2-intro-section2">Section 2: Macros</h4>
+			<p>This section could fill around 100 posts with all the different kinds of things you can do with macros, but for time sake, I’m going to keep it short and look at Xyph’s Autokill2 macro. You can find the macro at the top in the &#39Required Materials&#39 section.</p>
+			<p></p>
+			<p>I'll try to work you through the macro by splitting it into sections.</p>
+			<pre><code class="">|#event Backstab "You backstab #1# for #2# points of damage."</code></pre>
+			<p>This first line at the top references what we call events. Since Xyph actually commented out (denoted by the &#39 | &#39), I'll leave it at that for now.</p>
 		</div>
 		<br></br>
 	</section>
