Navbar JS Load Change
I changed the way the navbar is loaded so that the page is rendered before it is loaded so if the JS gets hung up for some reason, the page isn't dead.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="javascript.js"></script>
 </head>
-<body>
+<body onload="loadNavBar()">
 
 <!-- Navigation Bar (Horizontal 100% Width, Z-Index: 9999) -->
 <div id="navbar">
