--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="images/icon/heart-512.png"/>
 	<link rel="icon" href="images/icon/heart-512.png"/>
 
-	<!-- Bootstrap Imports -->
+	<!-- Framework Imports -->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<script src="jquery/jquery-3.3.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
@@ -21,10 +21,49 @@
 	<script src="javascript.js"></script>
 </head>
 <body onload="loadNavBar()">
-
 <!-- Navigation Bar (Horizontal 100% Width, Z-Index: 9999) -->
 <div id="navbar">
 </div>
+<!-- Offline Navbar
+<nav class="navbar navbar-toggleable-md navbar-dark bg-dark">
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" href="#">
+	<img src="images/icon/heart-32.png" class="img-fluid" alt="Icon">
+	Fintan Kelly
+	</a>
+	<div class="collapse navbar-collapse" id="navbarNavDropdown">
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" onclick="toggleSection('home');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#home">
+				Home
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" onclick="toggleSection('about');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#about">
+				About
+				</a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Tutorials
+				</a>
+					<div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item text-white" onclick="toggleSection('macroquest2');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
+						Macroquest2
+						</a>
+					</div>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" onclick="toggleSection('contact-me');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#contact-me">
+				Contact Me
+				</a>
+			</li>
+		</ul>
+	</div>
+</nav>
+-->
 
 <br></br><br></br>
 
@@ -33,6 +72,9 @@
 	<div class="container text-center">
 		<p class="display-4">Welcome!</p>
 		<p class="display-4">Choose a section in the top left navigation bar.</p>
+		<br></br>
+		<p class="display-4">Status: Feb. 8th</p>
+		<p style="font-size: 20px;">I'm currently working on converting tutorials and guides I've made to formats that fit the website.</p>
 	</div>
 </section>
 
@@ -42,6 +84,8 @@
 		<br></br>
 		<p>Hello! I'm Fintan Kelly, and this tiny website houses some of the tutorials I've made on various programming languages, applications, games, etc.</p>
 		<p>Hopefully you can find something that interests you, but if not, feel free to contact me about a specific topic!</p>
+		<br></br>
+		<li><p><a href="https://github.com/FintanKelly/FintanKelly.github.io" target="_blank">Github Repo</a></p></li>
 		<br></br>
 		<ul class="list-unstyled"><p>Website Resources:</p>
 			<li><p><a href="https://v4-alpha.getbootstrap.com/" target="_blank">Bootstrap 4</a></p></li>
@@ -63,24 +107,12 @@
 	</div>
 </section>
 
-<section class="toggle" style="display:none;" id="java">
-	<div class="container text-center">
-		<p class="display-4">I'm working on adding tutorials now!</p>
-	</div>
-</section>
-
-<section class="toggle" style="display:none;" id="jass">
-	<div class="container text-center">
-		<p class="display-4">I'm working on adding tutorials now!</p>
-	</div>
-</section>
-
 <section class="toggle" style="display:none;" id="macroquest2">
 	<div class="container text-center">
 		<div class="card text-white bg-dark mb-3 d-inline-block" style="max-width: 20rem;">
 			<div class="card-header"></div>
 				<div class="card-body">
-					<h4 class="card-title"><a href="#" onclick="toggleSection('mq2-intro');">Macroquest2</a></h4>
+					<h4 class="card-title"><a href="#" onclick="toggleSection('mq2-intro');">Macroquest2 Intro</a></h4>
 					<p class="card-text">I'll move you through using the MQ2Melee plugin and then macros in general. This guide assumes that you know what MQ2 is and have general knowledge of its uses.</p>
 				</div>
 		</div>
@@ -350,11 +382,5 @@ holyshit0 = /echo Hello Spam</code></pre>
 		</div>
 		<br></br>
 	</section>
-
-<section class="toggle" style="display:none;" id="writing">
-	<div class="container text-center">
-		<p class="display-4">I'm working on adding tutorials now!</p>
-	</div>
-</section>
 </body>
 </html>
