--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,5 @@
 <!-- Navigation Bar (Horizontal 100% Width, Z-Index: 9999) -->
+<!-- This independent html file is loaded by JS when the website loads -->
 <nav class="navbar navbar-toggleable-md navbar-dark bg-dark">
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -24,17 +25,8 @@
 				Tutorials
 				</a>
 					<div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item text-white" onclick="toggleSection('java');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
-						Java
-						</a>
-						<a class="dropdown-item text-white" onclick="toggleSection('jass');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
-						JASS
-						</a>
 						<a class="dropdown-item text-white" onclick="toggleSection('macroquest2');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
 						Macroquest2
-						</a>
-						<a class="dropdown-item text-white" onclick="toggleSection('writing');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
-						Writing
 						</a>
 					</div>
 			</li>
